# arbtrie

./: .clang-format  .cursor  .cursorrules  .gitignore  .lcovrc  404.html  Arbtrie Segment Lifecycle.graffle  BUGS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TODO  cowart.md  git_prompt.txt  index.html  mkdocs.yml  prompt.txt  run_coverage.sh  run_tests.sh  sitemap.xml  tsan_suppressions.txt
case-studies/silkworm/: CMakeLists.txt  README.md
case-studies/silkworm/scripts/: run_benchmarks.sh
case-studies/silkworm/src/: eth_state_bench.cpp
libraries/hash/: CMakeLists.txt
libraries/hash/include/hash/: lehmer64.h
libraries/mdbxrocks/: CMakeLists.txt
libraries/mdbxrocks/src/: db_impl.cpp
libraries/psitri/: CMakeLists.txt
libraries/psitri-duckdb/: CMakeLists.txt
libraries/psitri-duckdb/benchmarks/: tatp_bench.cpp
libraries/psitri-duckdb/include/psitri-duckdb/: psitri_catalog.hpp  psitri_delete.hpp  psitri_insert.hpp  psitri_scanner.hpp  psitri_sql.hpp  psitri_transaction.hpp  psitri_update.hpp  row_encoding.hpp
libraries/psitri-duckdb/src/: psitri_catalog.cpp  psitri_delete.cpp  psitri_extension.cpp  psitri_insert.cpp  psitri_scanner.cpp  psitri_transaction.cpp  psitri_update.cpp  row_encoding.cpp
libraries/psitri-duckdb/tests/: sql_integration_tests.cpp
libraries/psitri-sql/: CMakeLists.txt
libraries/psitri-sql/benchmarks/: tatp_bench.cpp
libraries/psitri-sql/include/psitri-sql/: psitri_catalog.hpp  psitri_delete.hpp  psitri_insert.hpp  psitri_scanner.hpp  psitri_sql.hpp  psitri_transaction.hpp  psitri_update.hpp  row_encoding.hpp
libraries/psitri-sql/src/: psitri_catalog.cpp  psitri_delete.cpp  psitri_extension.cpp  psitri_insert.cpp  psitri_scanner.cpp  psitri_transaction.cpp  psitri_update.cpp  row_encoding.cpp
libraries/psitri-sql/tests/: sql_integration_tests.cpp
libraries/psitri-sqlite/: CMakeLists.txt  README.md
libraries/psitri-sqlite/include/psitri-sqlite/: sqlite3_btree_compat.h
libraries/psitri-sqlite/src/: btree_helpers.c  btree_psitri.cpp
libraries/psitri-sqlite/tests/: CMakeLists.txt  run_sqlite_tests.sh  smoke_test.cpp  test_stubs.c
libraries/psitri/doc/: tree.md
libraries/psitri/include/psitri/: count_keys.hpp  cursor.hpp  database.hpp  database_impl.hpp  fwd.hpp  live_range_map.hpp  lock_policy.hpp  node_ptr.hpp  nodes.hpp  range_remove.hpp  read_session.hpp  read_session_impl.hpp  scoped_exit.hpp  transaction.hpp  tree.hpp  tree_ops.hpp  tx_mode.hpp  upsert_mode.hpp  util.hpp  value_pin.hpp  value_type.hpp  version_compare.hpp  write_cursor.hpp  write_session.hpp  write_session_impl.hpp
libraries/psitri/src/: database.cpp
libraries/psitri/src/dwal/: dwal_database.cpp  (+8 more)
libraries/psitri/tests/: count_keys_tests.cpp  coverage_gap_tests.cpp  cursor_tests.cpp  database_test.cpp  deep_recovery_tests.cpp  dwal_tests.cpp  edge_case_tests.cpp  freed_space_tests.cpp  fuzz_tests.cpp  inner_node_tests.cpp  inner_node_util_tests.cpp  integrity_tests.cpp  leaf_node_split_test.cpp  leaf_node_test.cpp  leaf_node_transform_tests.cpp  live_range_map_tests.cpp  multi_writer_tests.cpp  mvcc_tests.cpp  per_txn_version_tests.cpp  public_api_tests.cpp  range_remove_tests.cpp  recovery_tests.cpp  smart_ptr_tests.cpp  subtree_tests.cpp  subtree_tx_tracking_tests.cpp  tree_context_tests.cpp  tree_handle_tests.cpp  tree_ops_tests.cpp  trie_tests.cpp  truncate_tests.cpp  update_value_tests.cpp  value_node_tests.cpp  write_buffer_tests.cpp  zip_tests.cpp
libraries/psitrileveldb/: CMakeLists.txt
libraries/psitrileveldb/src/: db_impl.cpp
libraries/psitrimdbx/: CMakeLists.txt
libraries/psitrimdbx/include/: mdbx.h  mdbx.h++
libraries/psitrimdbx/src/: mdbx_impl.cpp
libraries/psitrimdbx/tests/: mdbx_tests.cpp
libraries/psitrirocks/: CMakeLists.txt
libraries/psitrirocks/src/: db_impl.cpp
libraries/sal/: CMakeLists.txt  README.md  design_ideas.txt
libraries/sal/cmake/: sal-config.cmake.in  sal.pc.in
libraries/sal/src/: address_alloc.cpp  allocator.cpp  allocator_session.cpp  block_allocator.cpp  control_block_alloc.cpp  hiint.cpp  mapping.cpp  segment_thread.cpp  shared_ptr_alloc.cpp
libraries/sal/test/: address_alloc_perf_test.cpp  address_alloc_tests.cpp  allocator_session_tests.cpp  block_allocator_tests.cpp  control_block_alloc_tests.cpp  mapping_tests.cpp  min_index_tests.cpp  read_cache_tests.cpp  reserve_limit_test.cpp  sal-tests.cpp  shared_ptr_alloc_tests.cpp
libraries/ucc/: CMakeLists.txt  README.md
libraries/ucc/tests/: CMakeLists.txt  find_u32x16_perf_test.cpp  lower_bound_tests.cpp  vm_arena_tests.cpp
programs/: BANK_BENCHMARK.md  CMakeLists.txt  KV_BENCHMARK.md  arb.cpp  arbdump.cpp  bank_bench.cpp  bench.cpp  bench_histogram.hpp  bench_signal.hpp  cow_amort_bench.cpp  dwal_bench.cpp  kv_bench.cpp  mdbx_bench.cpp  mdbx_probe.cpp  psitri_bench.cpp  psitri_tool.cpp  rocks_bench.cpp  rocksdb_scale_bench.cpp  tidesdb_bench.cpp  tidesdb_c_wrapper.c  tidesdb_c_wrapper.h
programs/arbtrie_sql/: CMakeLists.txt  README.md  arbtrie_vtab.cpp  main.cpp
programs/arbtrie_sql/tests/: test_sql_interface.cpp
test/: 3  CMakeLists.txt  arbtrie-tests.cpp  arbtrie_fuzz_tester.cpp  arbtrie_last_debug.cpp  arbtrie_last_test.cpp  cache_difficulty_state_tests.cpp  find_byte_tests.cpp  hierarchical_bitmap.cpp  hierarchical_bitmap_tests.cpp  hint_benchmark.cpp  init_replace_branch_test.cpp  interprocess_mutex_tests.cpp  leaf_insert_benchmark.cpp  lmdbx_arb_test.cpp  mapped_memory_tests.cpp  memcpy64_benchmark.cpp  min_index_32_benchmark.cpp  min_index_benchmark.cpp  min_index_combined_benchmark.cpp  min_index_test.cpp  node_meta_tests.cpp  padded_atomic_tests.cpp  poly_buffer_test.cpp  seg_alloc_dump_tests.cpp  segment_meta_tests.cpp  sim_db.hpp  sim_db_test.cpp  simd_x86_benchmark.cpp  spmc_circular_buffer.cpp  sqlite_arb_test.cpp  test_dwal_cursor_visibility.cpp  test_main.cpp
test/min_index/: CMakeLists.txt  min_index.hpp  min_index.hpp.bak  neon_v11.hpp  neon_v11a.hpp  neon_v13.hpp  neon_v13a.hpp  neon_v14.hpp  neon_v15.hpp  scalar.hpp  tournament.hpp  utils.hpp
visualizer/: CMakeLists.txt  segment_visualizer.cpp
(+310 files in other folders)
